# colony-of-minds

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyrightconfig.json  quickstart.md
.github/: pull_request_template.md
maincode/: README.md  pyproject.toml  pyrightconfig.json  quickstart_example.py
maincode/atmacore/: __init__.py  atmacore_tokenizer.json  corpus_scratch.txt  data_generator.py  model.py  tokenizer.py  tokenizer_trainer.py  train.py  train_data.jsonl  val_data.jsonl
maincode/atmacore/tests/: test_atmacore.py
maincode/colony_ai/: run_cli_operator.py  run_colony.py  run_web_operator.py
maincode/colony_ai/colony/: __init__.py  atma.py  config.py  operator.py  router.py  schemas.py  tools.py  verifier.py
maincode/colony_ai/memory/: __init__.py  memory_store.py
maincode/colony_ai/plugins/: README.md
maincode/colony_ai/plugins/suboperators/: __init__.py
maincode/colony_ai/suboperators/: __init__.py  code_op.py  keyword_op.py  math_op.py  memory_op.py  planner_op.py  tool_op.py
maincode/colony_ai/tests/: __init__.py  evaluation_dataset.json  run_benchmarks.py  stress_test.py  test_atma.py  test_code_op.py  test_keyword_op.py  test_math_op.py  test_memory_op.py  test_optimization.py  test_pipeline.py  test_planner_op.py  test_router.py  test_tool_use.py  test_verifier.py
maincode/colony_ai/web_client/: index.css  index.html  index.js
plans/: 00_master_roadmap.md  01_phase_foundation.md  02_phase_router.md  03_phase_suboperators.md  04_phase_verifier.md  05_phase_template_atma.md  06_phase_model_atma.md  (+29 more)
(+2 files in other folders)
